# hyper-zip

./: CHANGELOG.md  LICENSE  OPTIMIZATION_RESULTS.md  README.md  cabal.project  hyper-zip.cabal  zhype.cabal
core-test/: FusionBench.hs  FusionTest.hs  Main.hs
src/: HyperZip-funtype-inline.hs  HyperZip-funtype.hs  HyperZip-lists-inline.hs  HyperZip-lists.hs  HyperZip.hs  Zhype.hs
