cabal-version:      3.0
name:               hyper-zip
version:            0.1.0.0
-- synopsis:
-- description:
license:            BSD-3-Clause
license-file:       LICENSE
author:             Aaron Allen
maintainer:         aaronallen8455@gmail.com
-- copyright:
category:           Data
build-type:         Simple
extra-doc-files:    CHANGELOG.md, README.md
-- extra-source-files:

common warnings
    ghc-options: -Wall -O2

library
    import:           warnings
    exposed-modules:  HyperZip
    -- other-modules:
    -- other-extensions:
    build-depends:    base ^>=4.21.0.0,
                      hyperfunctions
    hs-source-dirs:   src
    default-language: GHC2021

test-suite hyper-zip-test
    import:           warnings
    default-language: GHC2021
    -- other-modules:
    -- other-extensions:
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    build-depends:
        base ^>=4.21.0.0,
        hyper-zip

executable core-test
  main-is: Main.hs
  hs-source-dirs: core-test
  default-language: GHC2021
  ghc-options: -freduction-depth=0 -ddump-simpl -ddump-to-file -dno-suppress-coercions -O2
  build-depends:
    base ^>=4.21.0.0,
    hyper-zip

executable fusion-test
  main-is: FusionTest.hs
  hs-source-dirs: core-test
  default-language: GHC2021
  ghc-options: -O2 -ddump-simpl -ddump-to-file
  build-depends:
    base ^>=4.21.0.0,
    hyper-zip

executable fusion-bench
  main-is: FusionBench.hs
  hs-source-dirs: core-test
  default-language: GHC2021
  ghc-options: -O2 -rtsopts -ddump-simpl -ddump-to-file
  build-depends:
    base ^>=4.21.0.0,
    hyper-zip
