cabal-version:      3.0
name:               zhype
version:            0.1.0.0
-- synopsis:
-- description:
license:            BSD-3-Clause
license-file:       LICENSE
author:             Aaron Allen
maintainer:         aaronallen8455@gmail.com
-- copyright:
category:           Data
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  Zhype
    -- other-modules:
    -- other-extensions:
    build-depends:    base ^>=4.21.0.0,
                      hyperfunctions
    hs-source-dirs:   src
    default-language: GHC2021

test-suite zhype-test
    import:           warnings
    default-language: GHC2021
    -- other-modules:
    -- other-extensions:
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    build-depends:
        base ^>=4.21.0.0,
        zhype
